Dark version of index page

--- a/app/views/homeViews/homepage.html.erb
+++ b/app/views/homeViews/homepage.html.erb
@@ -1,11 +1,27 @@
 <div id = "buffer" class="py1">
 </div>
+
 <div class = "container-fluid">
   <div class = "row">
     <div class = "col-md-10 offset-1 text-white bg-dark rounded text-center font-weight-bold mb-3">
       <h1>Endgame trainer</h1>
     </div>
   </div>
+
+  <div class="row">
+
+    <div class = "col-md-10 offset-1 text-white bg-dark rounded text-center mb-3">
+      <%# <div class = "text-left mb-3 mt-3">
+        <h5>Manage your endgame collection</h5>
+      </div> %>
+
+      <a href="/bookmarks" class="btn btn-secondary btn-block mt-3 mb-3 font-weight-bold">
+          Manage your endgame collection
+      </a>
+    </div>
+
+  </div>
+
   <div class = "row">
     <div class = "col-md-10 offset-1 text-white bg-dark rounded text-center">
       <div class = "text-left mb-3 mt-3">
@@ -37,8 +53,8 @@
         <div class="mb-3">
         </div>
 
-        <button class="btn btn-secondary btn-block mb-3 font-weight-bold">
-          Train me!
+        <button class="btn btn-primary btn-block mb-3 font-weight-bold">
+          Train!
         </button>
 
       </form>
