--- a/app/views/bookmarks/index.html.erb
+++ b/app/views/bookmarks/index.html.erb
@@ -1,118 +1,78 @@
 <div>
   <div>
-    <h1>
+    <h1 class="text-white">
       List of all bookmarks
     </h1>
   </div>
 </div>
-
 <hr>
-
 <div>
   <div>
-    <h2>
+    <h2 class="text-white">
       Add a new bookmark
     </h2>
 
     <form action="/insert_bookmark" method="post">
-      <div>
-        <label for="position_id_box">
-          Position
-        </label>
-
-        <input type="text" id="position_id_box" name="query_position_id">
+      <div class="form-group text-white">
+        <label for="position_id_box">Position</label>
+        <input type="text" class="form-control bg-dark text-white" id="position_id_box" placeholder="Enter position id">
       </div>
-
-      <div>
-        <label for="user_id_box">
-          User
-        </label>
-
-        <input type="text" id="user_id_box" name="query_user_id">
+      <div class="form-group text-white">
+        <label for="user_id_box">User</label>
+        <input type="text" class="form-control bg-dark text-white" id="user_id_box" placeholder="Enter user id">
       </div>
-
-      <div>
-        <label for="tag_id_box">
-          Tag
-        </label>
-
-        <input type="text" id="tag_id_box" name="query_tag_id">
+      <div class="form-group text-white">
+        <label for="tag_id_box">tag</label>
+        <input type="text" class="form-control bg-dark text-white" id="tag_id_box" placeholder="Enter tag id">
       </div>
-
-      <button>
-        Create bookmark
-      </button>
+      <button type="submit" class="btn btn-primary">Submit</button>
     </form>
   </div>
 </div>
-
 <hr>
 <div>
   <div>
-    <table>
-      <tr>
-        <th>
-          ID
-        </th>
-
-        <th>
-          Position
-        </th>
-
-        <th>
-          User
-        </th>
-
-        <th>
-          Tag
-        </th>
-
-        <th>
-          Created at
-        </th>
-
-        <th>
-          Updated at
-        </th>
-
-        <th>
-        </th>
-      </tr>
-
-      <% @list_of_bookmarks.each do |a_bookmark| %>
-      <tr>
-        <td>
-          <%= a_bookmark.id %>
-        </td>
-
-        <td>
-          <%= a_bookmark.position_id %>
-        </td>
-
-        <td>
-          <%= a_bookmark.user_id %>
-        </td>
-
-        <td>
-          <%= a_bookmark.tag_id %>
-        </td>
-
-        <td>
-          <%= time_ago_in_words(a_bookmark.created_at) %> ago
-        </td>
-        <td>
-          <%= time_ago_in_words(a_bookmark.updated_at) %> ago
-        </td>
-
-        <td>
-          <a href="/bookmarks/<%= a_bookmark.id %>">
-            Show details
-          </a>
-        </td>
-      </tr>
-      <% end %>
+    <table class="table table-dark">
+      <thead>
+        <tr>
+          <th scope="col">ID</th>
+          <th scope="col">Position</th>
+          <th scope="col">User</th>
+          <th scope="col">Tag</th>
+          <th scope="col">Created at</th>
+          <th scope="col">Updated at</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @list_of_bookmarks.each do |a_bookmark| %>
+          <tr>
+            <th scop="row">
+              <%= a_bookmark.id %>
+            </th>
+            <td>
+              <%= a_bookmark.position_id %>
+            </td>
+            <td>
+              <%= a_bookmark.user_id %>
+            </td>
+            <td>
+              <%= a_bookmark.tag_id %>
+            </td>
+            <td>
+              <%= time_ago_in_words(a_bookmark.created_at) %> ago
+            </td>
+            <td>
+              <%= time_ago_in_words(a_bookmark.updated_at) %> ago
+            </td>
+            <td>
+              <a href="/bookmarks/<%= a_bookmark.id %>">
+                Show details
+              </a>
+            </td>
+          </tr>
+        <% end %>
+      </tbody>
     </table>
   </div>
 </div>
-
 <hr>
