--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,7 +32,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link text-white font-weight-bold" href="/">About<span class="sr-only">(current)</span></a>
+            <a class="nav-link text-white font-weight-bold" href="/positions">Position library<span class="sr-only">(current)</span></a>
           </li>
         </ul>
 
