Clean up positions

--- a/app/views/homeViews/homepage.html.erb
+++ b/app/views/homeViews/homepage.html.erb
@@ -3,7 +3,7 @@
 
 <div class = "container-fluid">
   <div class = "row">
-    <div class = "col-md-10 offset-1 text-white bg-dark rounded text-center font-weight-bold mb-3">
+    <div class = "col-md-10 offset-1 text-white rounded text-center font-weight-bold mb-3">
       <h1>Endgame trainer</h1>
     </div>
   </div>
