--- a/app/views/bookmarks/index.html.erb
+++ b/app/views/bookmarks/index.html.erb
@@ -47,29 +47,13 @@
       <tbody>
         <% @list_of_bookmarks.each do |a_bookmark| %>
           <tr>
-            <th scop="row">
-              <%= a_bookmark.id %>
-            </th>
-            <td>
-              <%= a_bookmark.position_id %>
-            </td>
-            <td>
-              <%= a_bookmark.user_id %>
-            </td>
-            <td>
-              <%= a_bookmark.tag_id %>
-            </td>
-            <td>
-              <%= time_ago_in_words(a_bookmark.created_at) %> ago
-            </td>
-            <td>
-              <%= time_ago_in_words(a_bookmark.updated_at) %> ago
-            </td>
-            <td>
-              <a href="/bookmarks/<%= a_bookmark.id %>">
-                Show details
-              </a>
-            </td>
+            <th scop="row"><%= a_bookmark.id %></th>
+            <td><%= a_bookmark.position_id %></td>
+            <td><%= a_bookmark.user_id %></td>
+            <td><%= a_bookmark.tag_id %></td>
+            <td><%= time_ago_in_words(a_bookmark.created_at) %> ago</td>
+            <td><%= time_ago_in_words(a_bookmark.updated_at) %> ago</td>
+            <td><a href="/bookmarks/<%= a_bookmark.id %>">Show details</a></td>
           </tr>
         <% end %>
       </tbody>
