--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,14 +32,21 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link text-white font-weight-bold" href="/positions">Position library<span class="sr-only">(current)</span></a>
+            <a class="nav-link text-white font-weight-bold" href="/positions">Endgame library<span class="sr-only">(current)</span></a>
           </li>
         </ul>
 
-        <form class="form-inline my-2 my-lg-0">
+        <%# <form class="form-inline my-2 my-lg-0">
           <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
           <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-        </form>
+        </form> %>
+
+        <ul class="navbar-nav my-2 my-lg-0">
+          <li class="nav-item active">
+            <a class="nav-link text-white font-weight-bold" href="/positions"><%= @current_user.username%><span class="sr-only">(current)</span></a>
+          </li>
+        </ul>
+
       </div>
     </nav>
     
