--- a/app/views/user_authentication/sign_in.html.erb
+++ b/app/views/user_authentication/sign_in.html.erb
@@ -1,23 +1,30 @@
-<h1>Sign in</h1>
+<div id = "buffer" class="py1">
+</div>
 
-<form action="/user_verify_credentials" method="post">
-  <div>
-    <label for="email_box">Email</label>
-    <input id="email_box" name="query_email" placeholder="Enter your email..." type="text">
+<div class = "container-fluid">
+  <div class = "row">
+    <div class = "col-md-6 offset-3 text-white rounded text-center font-weight-bold mb-3">
+      <h1>Sign in</h1>
+    </div>
   </div>
 
-  <div>
-    <label for="password_box">Password</label>
-    <input id="password_box" name="query_password" placeholder="Enter your password..." type="password">
+  <div class = "row">
+    <div class = "col-md-6 offset-3 text-white bg-dark rounded pt-2">
+      <form action="/user_verify_credentials" method="post">
+            <div class="form-group text-white">
+              <label for="email_box">Email</label>
+              <input class="form-control bg-dark text-white" id="email_box" name="query_email" placeholder="Enter your email..." type="email">
+            </div>
+            <div class="form-group text-white">
+              <label for="password_box">Email</label>
+              <input class="form-control bg-dark text-white" id="password_box" name="query_password" placeholder="Enter your password..." type="password">
+            </div>
+            <button type="submit" class="btn btn-primary mb-3">Sign in</button>
+    </form>
+
+    </div>
   </div>
+  <hr>
+  <div class="col-md-6 offset-3 text-white">Or, <a href="/user_sign_up">Sign up</a> instead.</div>
 
-  <button>
-    Sign in
-  </button>
-</form>
-
-<hr>
-
-<p>
-  Or, <a href="/user_sign_up">Sign up</a> instead.
-</p>
+</div>
