Added alerts and notices and sign up form

--- a/app/views/user_authentication/sign_in.html.erb
+++ b/app/views/user_authentication/sign_in.html.erb
@@ -1,6 +1,3 @@
-<div id = "buffer" class="py1">
-</div>
-
 <div class = "container-fluid">
   <div class = "row">
     <div class = "col-md-6 offset-3 text-white rounded text-center font-weight-bold mb-3">
@@ -16,11 +13,11 @@
               <input class="form-control bg-dark text-white" id="email_box" name="query_email" placeholder="Enter your email..." type="email">
             </div>
             <div class="form-group text-white">
-              <label for="password_box">Email</label>
+              <label for="password_box">Password</label>
               <input class="form-control bg-dark text-white" id="password_box" name="query_password" placeholder="Enter your password..." type="password">
             </div>
             <button type="submit" class="btn btn-primary mb-3">Sign in</button>
-    </form>
+      </form>
 
     </div>
   </div>
