--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -60,6 +60,16 @@
 
       </div>
     </nav>
+
+    <div id = "buffer" class="py1"></div>
+
+    <% if notice.present? %>
+      <div class="offset-1 alert alert-success" role="alert"><%= notice %></div>
+    <% end %>
+
+    <% if alert.present?%>
+      <div class="offset-1 alert alert-danger" role="alert"><%= alert %></div>
+    <% end %>
     
     <%= yield %>
   </body>
