--- a/app/views/positions/index.html.erb
+++ b/app/views/positions/index.html.erb
@@ -37,10 +37,11 @@
         <tr>
           <th scope="col">ID</th>
           <th scope="col">FEN</th>
-          <th scope="col">Material count</th>
+          <th scope="col">Endgame type</th>
           <th scope="col">Pieces</th>
           <th scope="col">Created at</th>
           <th scope="col">Updated at</th>
+          <th scope="col"></th>
         </tr>
       </thead>
       <tbody>
@@ -49,6 +50,7 @@
         <tr>
           <td><%= a_position.id %></td>
           <td><%= a_position.fen %></td>
+          <td><%= a_position.endgame_type %></td>
           <td><%= a_position.pieces %></td>
           <td><%= time_ago_in_words(a_position.created_at) %> ago</td>
           <td><%= time_ago_in_words(a_position.updated_at) %> ago</td>
