--- a/app/assets/stylesheets/darkstyles.css
+++ b/app/assets/stylesheets/darkstyles.css
@@ -28,3 +28,11 @@ body {
   padding-top: 25px;
   padding-bottom: 25px;
 }
+
+.square{
+    /* width: 300px;
+    height: 300px */
+
+    width: 100%;
+    padding-bottom: 100%; /* = width for a square aspect ratio */
+}
