--- a/app/views/bookmarks/index.html.erb
+++ b/app/views/bookmarks/index.html.erb
@@ -33,7 +33,7 @@
 
 <div>
   <div>
-    <table class="table table-dark">
+    <table class="table table-striped table-dark">
       <thead>
         <tr>
           <th scope="col">ID</th>
