--- a/app/views/positions/index.html.erb
+++ b/app/views/positions/index.html.erb
@@ -1,3 +1,5 @@
+<div class="container-fluid">
+
 <div>
   <div>
     <h1 class="text-white text-center">
@@ -5,7 +7,9 @@
     </h1>
   </div>
 </div>
+
 <hr>
+
 <div class = "row">
   <div class = "col-md-6 offset-3 text-white bg-dark rounded">
     <div class = "text-left mb-3 mt-3">
@@ -29,32 +33,31 @@
 
   </div>
 </div>
+
 <hr>
-<div class="container-fluid">
   <div>
-    <table class="table table-dark">
+    <table class="table table-striped table-dark">
       <thead>
         <tr>
           <th scope="col">ID</th>
           <th scope="col">FEN</th>
           <th scope="col">Endgame type</th>
           <th scope="col">Pieces</th>
-          <th scope="col">Created at</th>
-          <th scope="col">Updated at</th>
+          <%# <th scope="col">Created at</th>
+          <th scope="col">Updated at</th> %>
           <th scope="col"></th>
         </tr>
       </thead>
       <tbody>
-      </tr>
       <% @list_of_positions.each do |a_position| %>
         <tr>
           <td><%= a_position.id %></td>
           <td><%= a_position.fen %></td>
           <td><%= a_position.endgame_type %></td>
           <td><%= a_position.pieces %></td>
-          <td><%= time_ago_in_words(a_position.created_at) %> ago</td>
-          <td><%= time_ago_in_words(a_position.updated_at) %> ago</td>
-          <td><a href="/positions/<%= a_position.id %>">Show details</a></td>
+          <!-- <td><%= time_ago_in_words(a_position.created_at) %> ago</td>
+          <td><%= time_ago_in_words(a_position.updated_at)%> ago</td> -->
+          <td><a href="/positions/<%= a_position.id %>"><button class="btn btn-success">Show details</button></a></td>
         </tr>
       <% end %>
     </table>
