--- a/app/views/positions/show.html.erb
+++ b/app/views/positions/show.html.erb
@@ -59,11 +59,89 @@
     </div>
 
     <div class="col-md-4 offset-1">
-      <div class="square bg-danger">
-
-      </div>
+      <table class="chessboard">
+        <tr class="chessboard">
+            <td class="chessboard"></td>
+            <td class="chessboard"></td>
+            <td class="chessboard"></td>
+            <td class="chessboard"></td>
+            <td class="chessboard"></td>
+            <td class="chessboard"></td>
+            <td class="chessboard"></td>
+            <td class="chessboard"></td>
+        </tr>
+        <tr class="chessboard">
+            <td class="chessboard"></td>
+            <td class="chessboard"></td>
+            <td class="chessboard"></td>
+            <td class="chessboard"></td>
+            <td class="chessboard"></td>
+            <td class="chessboard"></td>
+            <td class="chessboard"></td>
+            <td class="chessboard"></td>
+        </tr>
+        <tr class="chessboard">
+            <td class="chessboard"></td>
+            <td class="chessboard"></td>
+            <td class="chessboard"></td>
+            <td class="chessboard"></td>
+            <td class="chessboard"></td>
+            <td class="chessboard"></td>
+            <td class="chessboard"></td>
+            <td class="chessboard"></td>
+        </tr>
+        <tr class="chessboard">
+            <td class="chessboard"></td>
+            <td class="chessboard"></td>
+            <td class="chessboard"></td>
+            <td class="chessboard"></td>
+            <td class="chessboard"></td>
+            <td class="chessboard"></td>
+            <td class="chessboard"></td>
+            <td class="chessboard"></td>
+        </tr>
+        <tr class="chessboard">
+            <td class="chessboard"></td>
+            <td class="chessboard"></td>
+            <td class="chessboard"></td>
+            <td class="chessboard"></td>
+            <td class="chessboard"></td>
+            <td class="chessboard"></td>
+            <td class="chessboard"></td>
+            <td class="chessboard"></td>
+        </tr>
+        <tr class="chessboard">
+            <td class="chessboard"></td>
+            <td class="chessboard"></td>
+            <td class="chessboard"></td>
+            <td class="chessboard"></td>
+            <td class="chessboard"></td>
+            <td class="chessboard"></td>
+            <td class="chessboard"></td>
+            <td class="chessboard"></td>
+        </tr>
+        <tr class="chessboard">
+            <td class="chessboard"></td>
+            <td class="chessboard"></td>
+            <td class="chessboard"></td>
+            <td class="chessboard"></td>
+            <td class="chessboard"></td>
+            <td class="chessboard"></td>
+            <td class="chessboard"></td>
+            <td class="chessboard"></td>
+        </tr>
+        <tr class="chessboard">
+            <td class="chessboard"></td>
+            <td class="chessboard"></td>
+            <td class="chessboard"></td>
+            <td class="chessboard"></td>
+            <td class="chessboard"></td>
+            <td class="chessboard"></td>
+            <td class="chessboard"></td>
+            <td class="chessboard"></td>
+        </tr>
+        </table>
     </div>
-
   </div>
 
   <hr>
