--- a/app/views/positions/show.html.erb
+++ b/app/views/positions/show.html.erb
@@ -62,7 +62,7 @@
       <table class="chessboard">
         <tr class="chessboard">
             <td class="chessboard"></td>
-            <td class="chessboard"></td>
+            <td class="chessboard"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/ff/Chess_rdt45.svg/1024px-Chess_rdt45.svg.png" class="rook"></td>
             <td class="chessboard"></td>
             <td class="chessboard"></td>
             <td class="chessboard"></td>
