--- a/app/views/positions/show.html.erb
+++ b/app/views/positions/show.html.erb
@@ -66,7 +66,7 @@
             <td class="chessboard">
               <%# if rook render rook, etc. %>
               <% if @the_board[i][j] != "blank" %>
-                <img src="<%= @the_board[i][j] %>" class="piece">
+                <img src="<%= @the_images[i][j] %>" class="piece">
               <% end %>
                           
             </td>
