Can bookmark from positions list

--- a/app/views/positions/index.html.erb
+++ b/app/views/positions/index.html.erb
@@ -46,6 +46,7 @@
           <%# <th scope="col">Created at</th>
           <th scope="col">Updated at</th> %>
           <th scope="col"></th>
+          <th scope="col"></th>
         </tr>
       </thead>
       <tbody>
@@ -57,6 +58,15 @@
           <td><%= a_position.pieces %></td>
           <!-- <td><%= time_ago_in_words(a_position.created_at) %> ago</td>
           <td><%= time_ago_in_words(a_position.updated_at)%> ago</td> -->
+
+          <td>
+            <form action="/insert_bookmark" method="post">
+              <input type="hidden" id="position_box" name="query_position_id" value=<%= a_position.id %>>
+              <input type="hidden" id="user_box" name="query_user_id" value=<%= @current_user.id %>>
+              <input type="hidden" id="tag_box" name="query_tag_id" value="Untagged">             
+              <button type="submit" class="btn btn-primary mb-3">Bookmark position</button>
+            </form>
+          </td>
           <td><a href="/positions/<%= a_position.id %>"><button class="btn btn-success">Show details</button></a></td>
         </tr>
       <% end %>
