--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,11 +30,19 @@
       </button>
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
+        <ul class="navbar-nav">
           <li class="nav-item active">
             <a class="nav-link text-white font-weight-bold" href="/positions">Endgame library<span class="sr-only">(current)</span></a>
           </li>
         </ul>
+        
+        <% if @current_user.present?%>
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link text-white font-weight-bold" href="/tags">Your tags<span class="sr-only">(current)</span></a>
+          </li>
+        </ul>
+        <% end %>        
 
         <%# <form class="form-inline my-2 my-lg-0">
           <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
