Users see only their bookmarks, cleaned up sign out, made everything sign in only

--- a/app/views/user_authentication/edit_profile.html.erb
+++ b/app/views/user_authentication/edit_profile.html.erb
@@ -25,9 +25,10 @@
               <label for="password_confirmation_box">Password Confirmation</label>
               <input class="form-control bg-dark text-white" id="password_confirmation_box" name="query_password_confirmation" placeholder="Confirm your password..." type="password">
             </div>
-            <button type="submit" class="btn btn-primary mb-3">Update account</button>
+            <button type="submit" class="btn btn-primary">Update account</button> 
+            <div class="mb-3"></div>
       </form>
-
+      <a href="/user_sign_out"><button class="btn btn-success mb-3">Sign out</button></a>
     </div>
   </div>
 
