--- a/app/views/positions/index.html.erb
+++ b/app/views/positions/index.html.erb
@@ -39,7 +39,7 @@
     <table class="table table-striped table-dark">
       <thead>
         <tr>
-          <th scope="col">ID</th>
+          <%# <th scope="col">ID</th> %>
           <th scope="col">FEN</th>
           <th scope="col">Endgame type</th>
           <th scope="col">Pieces</th>
@@ -52,7 +52,7 @@
       <tbody>
       <% @list_of_positions.each do |a_position| %>
         <tr>
-          <td><%= a_position.id %></td>
+          <!-- <td><%= a_position.id %></td> -->
           <td><%= a_position.fen %></td>
           <td><%= a_position.endgame_type %></td>
           <td><%= a_position.pieces %></td>
@@ -61,7 +61,7 @@
 
           <td>
             <form action="/insert_bookmark" method="post">
-              <input type="hidden" id="position_box" name="query_position_id" value=<%= a_position.id %>>
+              <input type="hidden" id="position_box" name="query_position_id" value="<%= a_position.id %>">
               <input type="hidden" id="user_box" name="query_user_id" value=<%= @current_user.id %>>
               <input type="hidden" id="tag_box" name="query_tag_id" value="Untagged">             
               <button type="submit" class="btn btn-primary mb-3">Bookmark position</button>
