--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,13 +32,13 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav">
           <li class="nav-item active">
-            <a class="nav-link text-white font-weight-bold" href="/positions">Endgame library<span class="sr-only">(current)</span></a>
+            <a class="nav-link text-white font-weight-bold" href="/positions">Browse endgames<span class="sr-only">(current)</span></a>
           </li>
         </ul>
         
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link text-white font-weight-bold" href="/tags">Your tags<span class="sr-only">(current)</span></a>
+            <a class="nav-link text-white font-weight-bold" href="/bookmarks">Your bookmarks<span class="sr-only">(current)</span></a>
           </li>
         </ul>
         
