Can add bookmark via form

--- a/app/views/bookmarks/index.html.erb
+++ b/app/views/bookmarks/index.html.erb
@@ -37,7 +37,7 @@
       <h4>Add a new bookmarked position</h4>
     </div>
     
-    <form action="/insert_bookmark" method="post">
+    <form action="/insert_bookmark_from_fen" method="post">
       <div class="form-group text-white">
         <label for="fen_box">FEN</label>
         <input type="text" class="form-control bg-dark text-white" id="fen_box" name="query_fen" placeholder="Paste FEN">
