Made bookmark show look like position show but refer back to bookmarks

--- a/app/views/positions/show.html.erb
+++ b/app/views/positions/show.html.erb
@@ -16,7 +16,7 @@
     <div class = "col-md-5 offset-1 text-white bg-dark rounded">
       <div class = "text-left mb-3 mt-3">
         <div>
-          <div><a href="/positions">Go back</a></div>
+          <div><a href="/positions"><button class="btn btn-success text-white">Go back</button></a></div>
 
           <!--<div>
             <a href="/delete_position/<%= @the_position.id %>">
