--- a/app/views/bookmarks/show.html.erb
+++ b/app/views/bookmarks/show.html.erb
@@ -1,101 +1,85 @@
-<div>
+<div class="container-fluid">
+
   <div>
-    <h1>
-      Bookmark #<%= @the_bookmark.id %> details
-    </h1>
-
     <div>
-      <div>
-        <a href="/bookmarks">
-          Go back
-        </a>
+      <h1 class="text-white text-center">
+        Bookmarked position details
+      </h1>
+    </div>
+  </div>
+
+  <hr>
+
+  <div class = "row">
+    
+    <!-- table of info about the fen -->
+    <div class = "col-md-5 offset-1 text-white bg-dark rounded">
+      <div class = "text-left mb-3 mt-3">
+        <div>
+          <div><a href="/bookmarks"><button class="btn btn-success text-white">Go back</button></a></div>
+
+          <!--<div>
+            <a href="/delete_position/<%= @the_position.id %>">
+              Delete position
+            </a>
+          </div> -->
+        </div>
       </div>
 
-      <div>
-        <a href="/delete_bookmark/<%= @the_bookmark.id %>">
-          Delete bookmark
-        </a>
-      </div>
+      <table class="table table-striped table-dark mt-3">
+        <tbody>
+          <tr>
+            <td>FEN</td>
+            <td><%= @the_position.fen %></td>
+          </tr>
+          <tr>
+            <td>Endgame type</td>
+            <td><%= @the_position.endgame_type %></td>
+          </tr>
+          <tr>
+            <td>Pieces</td>
+            <td><%= @the_position.pieces %></td>
+          </tr>
+          <tr>
+            <td>Material count</td>
+            <td><%= @the_position.material_count %></td>
+          </tr>
+          <tr>
+            <td>Created at</td>
+            <td><%= time_ago_in_words(@the_position.created_at) %> ago</td>
+          </tr>
+          <tr>
+            <td>Updated at</td>
+            <td><%= time_ago_in_words(@the_position.updated_at) %> ago</td>
+          </tr>
+        </tbody>
+      </table>
+
+
     </div>
 
-    <dl>
-      <dt>
-        Position
-      </dt>
-      <dd>
-        <%= @the_bookmark.position_id %>
-      </dd>
+    <div class="col-md-4 offset-1">
+      <table class="chessboard">
+        <% (0..7).each do |i| %>
+          <tr class="chessboard">
+          <% (0..7).each do |j| %>
+            <td class="chessboard">
+              <%# if rook render rook, etc. %>
+              <% if @the_board[i][j] != "blank" %>
+                <img src="<%= @the_images[i][j] %>" class="piece">
+              <% end %>
+                          
+            </td>
+          <% end %>
+        <% end %>
 
-      <dt>
-        User
-      </dt>
-      <dd>
-        <%= @the_bookmark.user_id %>
-      </dd>
 
-      <dt>
-        Tag
-      </dt>
-      <dd>
-        <%= @the_bookmark.tag_id %>
-      </dd>
-
-      <dt>
-        Created at
-      </dt>
-      <dd>
-        <%= time_ago_in_words(@the_bookmark.created_at) %> ago
-      </dd>
-
-      <dt>
-        Updated at
-      </dt>
-      <dd>
-        <%= time_ago_in_words(@the_bookmark.updated_at) %> ago
-      </dd>
-    </dl>
+      </table>
+    </div>
   </div>
+
+  <hr>
+
+
+
 </div>
-
-<hr>
-
-
-<div>
-  <div>
-    <h2>
-      Edit bookmark
-    </h2>
-
-    <form action="/modify_bookmark/<%= @the_bookmark.id %>"  method="post" >
-      <div>
-        <label for="position_id_box">
-          Position
-        </label>
-
-        <input type="text" id="position_id_box" name="query_position_id" value="<%= @the_bookmark.position_id %>">
-      </div>
-
-      <div>
-        <label for="user_id_box">
-          User
-        </label>
-
-        <input type="text" id="user_id_box" name="query_user_id" value="<%= @the_bookmark.user_id %>">
-      </div>
-
-      <div>
-        <label for="tag_id_box">
-          Tag
-        </label>
-
-        <input type="text" id="tag_id_box" name="query_tag_id" value="<%= @the_bookmark.tag_id %>">
-      </div>
-
-      <button>
-        Update bookmark
-      </button>
-    </form>
-  </div>
-</div>
-
-<hr>
